src/test/ui/parser/mod_file_not_exist.stderr
error[E0583]: file not found for module `not_a_real_file`
  --> $DIR/mod_file_not_exist.rs:3:5
   |
LL | mod not_a_real_file;
   |     ^^^^^^^^^^^^^^^
   |
   = help: to create the module `not_a_real_file`, create file "$DIR/not_a_real_file.rs"

error: aborting due to previous error

For more information about this error, try `rustc --explain E0583`.
